# pyigata

./: .gitignore  .mise.toml  .pre-commit-config.yaml  .setup.py  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  run.sh  setup.cfg  setup.py  setup.sh
.github/workflows/: sandbox.yaml
docker/: Dockerfile  Dockerfile.jupyter  Dockerfile.pyigata  requirements.txt
pyigata/: __init__.py  __main__.py  color.py  common.py  constant.py  error.py  extend.py  license.py  log.py  logger.py  plot.py  record.py  tool.py  utility.py
sample/: __init__.py  common.py  core.py  data.py  plot.py  utility.py
src/: __init__.py  color.py  common.py  constant.py  extend.py  license.py  log.py  plot.py  tool.py  utility.py
src/core/: __init__.py  data.py  plot.py
src/util/: __init__.py  common.py  constant.py  extend.py  license.py  object.py  tool.py
tests/: context.py  test_common.py  test_core.py  test_data.py
tests/core/: test_data.py
tests/function/: test_common.py
tests/scenario/: test_bdd.py
tests/scenario/features/: bdd.feature
tests/util/: test_common.py
tool/license_check/: judge_license.py  license_check_config.yml  output_packages_and_licenses.py
