[tool.poetry]
name = "pyigata"
version = "0.1.0"
description = ""
authors = ["aYukiYoshida <yuki.yoshida@access-company.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.12"
numpy = "^1.22.4"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
pytest = "^7.1.2"
click = "^8.1.3"
black = "^22.3.0"
scipy = "^1.9.1"
pytest-bdd = "^6.0.1"
pytest-html = "^3.1.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
black = "^22.3.0"
flake8 = "^4.0.1"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
