[tool.poetry]
name = "pyigata"
version = "0.1.0"
description = ""
authors = ["aYukiYoshida <yuki.yoshida@access-company.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.4"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
click = "^8.1.3"
py = "^1.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
autoflake = "^2.2.0"
isort = "^5.12.0"
mypy = "^1.5.1"
pre-commit = "^3.3.3"
pytest-bdd = "^6.1.1"
pytest-html = "^3.2.0"
ruff = "^0.0.285"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 180

[tool.ruff]
line-length = 180

[tool.isort]
profile = "black"
line_length = 180

[tool.autoflake]
in-place = "True"
remove-duplicate-keys = "True"
remove-unused-variables = "True"

[tool.mypy]
disallow_any_generics = "True"
disallow_subclassing_any = "True"
disallow_untyped_calls = "True"
disallow_untyped_decorators = "True"
no_implicit_optional = "True"
warn_redundant_casts = "True"
warn_unused_ignores = "True"
warn_unused_configs = "True"
warn_return_any = "True"
strict_optional = "True"
strict_equality = "True"
ignore_missing_imports = "True"
