[metadata]
name = pyigata
version = attr: src.__version__
url = https://github.com/aYukiYoshida/pyigata
author = Yuki Yoshida
author_email = yuki.yoshida@access-company.com
# licence = 
license_file = LICENSE
description = igata for Python
long_description = file: README.md

[options]
zip_safe = False
# package_dir=
#     =
packages = find:
install_requires =
    pandas
    matplotlib
    seaborn
    python-box==3.4.6
# entry_points = file: entry_points.cfg

# [options.packages.find]
# exclude =
#     src.core
